# ec5

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  ec2pricing.yaml  ec5
journal/: 20230514190622_create_multi_platfrom_images.md
src/: ec2pricing.rs  lib.rs  main.rs  startup.rs
src/routes/: calculate.rs  mod.rs
tests/: health_check.rs
