[package]
name = "ec5"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ec5"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"

[dev-dependencies]
reqwest = "0.11"
